--- a/tp3Laboratorio/Prado.Agustin.2D.TP3/Excepciones/Excepciones.csproj
+++ b/tp3Laboratorio/Prado.Agustin.2D.TP3/Excepciones/Excepciones.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2F9BB72-BBFE-45A9-84FA-453E99359AD4}</ProjectGuid>
+    <ProjectGuid>{66EEBF11-6898-4E8D-BF56-CA05B5B993F4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EntidadesAbstractas</RootNamespace>
-    <AssemblyName>EntidadesAbstractas</AssemblyName>
+    <RootNamespace>Excepciones</RootNamespace>
+    <AssemblyName>Excepciones</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,14 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Persona.cs" />
+    <Compile Include="DniInvalidoException.cs" />
+    <Compile Include="NacionalidadInvalidaException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Excepciones\Excepciones.csproj">
-      <Project>{66eebf11-6898-4e8d-bf56-ca05b5b993f4}</Project>
-      <Name>Excepciones</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
