--- a/tp3Laboratorio/Prado.Agustin.2D.TP3/EntidadesInstanciables/EntidadesInstanciables.csproj
+++ b/tp3Laboratorio/Prado.Agustin.2D.TP3/EntidadesInstanciables/EntidadesInstanciables.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2F9BB72-BBFE-45A9-84FA-453E99359AD4}</ProjectGuid>
+    <ProjectGuid>{9EA962D2-BAC3-47E7-A018-B8E08AADAC3C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EntidadesAbstractas</RootNamespace>
-    <AssemblyName>EntidadesAbstractas</AssemblyName>
+    <RootNamespace>EntidadesInstanciables</RootNamespace>
+    <AssemblyName>EntidadesInstanciables</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,14 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Persona.cs" />
-    <Compile Include="PersonaGimnasio.cs" />
+    <Compile Include="Alumno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Excepciones\Excepciones.csproj">
-      <Project>{66eebf11-6898-4e8d-bf56-ca05b5b993f4}</Project>
-      <Name>Excepciones</Name>
+    <ProjectReference Include="..\EntidadesAbstractas\EntidadesAbstractas.csproj">
+      <Project>{d2f9bb72-bbfe-45a9-84fa-453e99359ad4}</Project>
+      <Name>EntidadesAbstractas</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
