--- a/tp3Laboratorio/Prado.Agustin.2D.TP3/EntidadesInstanciables/EntidadesInstanciables.csproj
+++ b/tp3Laboratorio/Prado.Agustin.2D.TP3/EntidadesInstanciables/EntidadesInstanciables.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="Alumno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Instructor.cs" />
+    <Compile Include="Jornada.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EntidadesAbstractas\EntidadesAbstractas.csproj">
