--- a/tp3Laboratorio/Prado.Agustin.2D.TP3/Excepciones/Excepciones.csproj
+++ b/tp3Laboratorio/Prado.Agustin.2D.TP3/Excepciones/Excepciones.csproj
@@ -39,9 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlumnoRepetidoException.cs" />
+    <Compile Include="ArchivosException.cs" />
     <Compile Include="DniInvalidoException.cs" />
     <Compile Include="NacionalidadInvalidaException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinInstructorException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
