Falta comentar un poco.

--- a/tp3Laboratorio/Prado.Agustin.2D.TP3/TestUnitarioExcepcionesNumerico/TestUnitarioExcepcionesNumerico.csproj
+++ b/tp3Laboratorio/Prado.Agustin.2D.TP3/TestUnitarioExcepcionesNumerico/TestUnitarioExcepcionesNumerico.csproj
@@ -50,13 +50,21 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Archivos\Archivos.csproj">
+      <Project>{b5ec9266-f5aa-410b-9921-dcaa25b3771b}</Project>
+      <Name>Archivos</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EntidadesAbstractas\EntidadesAbstractas.csproj">
       <Project>{d2f9bb72-bbfe-45a9-84fa-453e99359ad4}</Project>
       <Name>EntidadesAbstractas</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntidadesInstanciables\EntidadesInstanciables.csproj">
+      <Project>{9ea962d2-bac3-47e7-a018-b8e08aadac3c}</Project>
+      <Name>EntidadesInstanciables</Name>
     </ProjectReference>
     <ProjectReference Include="..\Excepciones\Excepciones.csproj">
       <Project>{66eebf11-6898-4e8d-bf56-ca05b5b993f4}</Project>
